--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
                             <p>Gửi Phương Uyên,...❤️ </p>
                         </div>
                         <div class="lyric-page" id="page2">
-                            <p>Anh viết những dòng này không phải vì nhất thời rung động,</p>
+                            <p>Anh không biết thuyết phục em bằng những câu nói văn vở,</p>
                         </div>
                         <div class="lyric-page" id="page3">
-                            <p>Mà vì anh đã nghĩ đến em rất nhiều.</p>
+                            <p> anh chỉ có thể nói hết ra từ tấm lòng của anh,</p>
                         </div>
                         <div class="lyric-page" id="page4">
                             <p>Mỗi lần nhìn thấy em cười,</p>
@@ -61,7 +61,7 @@
                             <p>anh luôn sẵn sàng ở đây,</p>
                         </div>
                         <div class="lyric-page" id="page14">
-                            <p>lặng lẽ quan tâm và chờ em quay lại nhìn anh.</p>
+                            <p>luôn quan tâm và chăm sóc cho em.</p>
                         </div>
                         <div class="lyric-page" id="page15">
                             <p>Em có thể không hoàn hảo,</p>
@@ -76,7 +76,7 @@
                             <p>chỉ đơn giản là... anh thích em ☺️.</p>
                         </div>
                         <div class="lyric-page" id="page19">
-                            <p>Thích ánh mắt ấy, nụ cười ấy, cách em bước qua đời anh nhẹ nhàng.</p>
+                            <p>Thích ánh mắt ấy, nụ cười ấy, cách em bước vào đời anh nhẹ nhàng.</p>
                         </div>
                         <div class="lyric-page" id="page20">
                             <p>Nếu em cũng có chút gì đó giống anh...</p>
