--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
                             <p>Thì cho anh một cơ hội, được ở bên cạnh em.</p>
                         </div>
                         <div class="lyric-page" id="page22">
-                            <p>Thật lòng.</p>
+                            <p>Thật lòng chỉ mình em.</p>
                         </div>
                         <div class="lyric-page" id="page23">
-                            <p>Chỉ mình em. Anh yêu em ❤️</p>
+                            <p>Em làm người yêu anh nha ❤️</p>
                         </div>
                     </div>
                 </div>
